--- a/package.json
+++ b/package.json
@@ -6,15 +6,11 @@
   "private": true,
   "author": "Octoblu Inc.",
   "dependencies": {
-    "debug": "^2.1.1",
-    "ecstatic": "^0.7.3",
-    "glob": "^5.0.3",
     "gulp": "^3.8.6",
     "gulp-bower": "0.0.6",
     "gulp-clean": "^0.3.1",
     "gulp-coffee": "^2.2.0",
     "gulp-concat": "^2.3.3",
-    "gulp-jsoncombine": "^1.0.0",
     "gulp-less": "^1.3.1",
     "gulp-nodemon": "^1.0.4",
     "gulp-plumber": "^0.6.4",
@@ -43,6 +39,8 @@
     "karma-sinon-chai": "^0.2.0",
     "karma-spec-reporter": "0.0.13",
     "mocha": "^2.1.0",
+    "proxy-middleware": "^0.11.0",
+    "pushstate-server": "iamruinous/pushstate-server",
     "selenium-webdriver": "^2.42.1",
     "shelljs": "^0.3.0",
     "sinon": "^1.12.2",
