--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ deploy:
   skip_cleanup: true
   local-dir: build
   on:
-    branch: master
+    branch: disabledmaster
 - provider: s3
   access_key_id: AKIAIT4X4NDGM2WVL6VA
   secret_access_key: *1
@@ -75,7 +75,7 @@ deploy:
   secret_access_key: *1
   app-id: 6829c218-74d9-4ff4-a7dc-9b5f810a05fe
   on:
-    branch: master
+    branch: disabledmaster
 - provider: opsworks
   access_key_id: AKIAIT4X4NDGM2WVL6VA
   secret_access_key: *1
