--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,8 @@ before_script:
 deploy:
 - provider: s3
   access_key_id: AKIAIT4X4NDGM2WVL6VA
-  secret_access_key: *1
+  secret_access_key: &1
+    secure: S1f1Hx3/rncOz2Sh+iSl+ay6Y9x0bRADF6lbgL3NZimIeUMG/AaXN5ctwcNs2/t4PPdsVj+3Mr60pBMrGfh8COXktBnCDqOtNGWNT9i94j5HPP0LCDB6Aqm5OJCEuSE3v4zXIv7t8Vg3lIY3Q8jJP+alnMF1qye986ywQNPQynM=
   local_dir: dpl_cd_upload
   skip_cleanup: true
   bucket: octoblu-deploy
