--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,6 @@
     "angular-sanitize": "=1.3.3",
     "angular-cookies": "=1.3.3",
     "angular-mocks": "=1.3.3",
-    "jquery-ui": "~1.10.4",
     "angular-ui-router": "~0.2.11",
     "modernizr": "~2.8.2",
     "fontawesome": "~4.2",
@@ -47,7 +46,6 @@
     "async": "~0.9.0",
     "mousetrap": "~1.4.6",
     "prism": "gh-pages",
-    "xxhash": "*",
     "mgo-mousetrap": "https://github.com/octoblu/mgo-mousetrap.git#0.1.5",
     "angular-material": "~0.8.3",
     "zeroclipboard": "~2.1.6",
@@ -63,7 +61,8 @@
     "angulartics": "~0.17.2",
     "shepherd.js": "~0.6.14",
     "MutationObservers": "Polymer/MutationObservers#~0.4.2",
-    "angular-schema-form": "~0.8.0"
+    "angular-schema-form": "~0.8.0",
+    "xxhash": "*"
   },
   "devDependencies": {
     "chai": "~1.9.1",
