--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ env:
 after_success:
 - ".kubernetes/travis_after_success"
 - mkdir -p build/$TRAVIS_BRANCH && tar czf build/$TRAVIS_BRANCH/$TRAVIS_COMMIT-public.tar.gz Dockerfile default.conf public
+- mkdir -p dpl_cdn/$TRAVIS_BRANCH/$TRAVIS_COMMIT && cp -rf public/* dpl_cdn/$TRAVIS_BRANCH/$TRAVIS_COMMIT 
 before_script:
 - if [ ${TRAVIS_BRANCH} == master ]; then export NODE_ENV=production; else export
   NODE_ENV=staging; fi
@@ -41,6 +42,13 @@ deploy:
   bucket: octoblu-deploy
   on:
     branch: master
+- provider: s3
+  access_key_id: AKIAIT4X4NDGM2WVL6VA
+  secret_access_key: *1
+  bucket: app.octoblu.com
+  region: us-west-2
+  skip_cleanup: true
+  local-dir: dpl_cdn
 - provider: s3
   access_key_id: AKIAIT4X4NDGM2WVL6VA
   secret_access_key: *1
