--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ env:
 after_success:
 - ".kubernetes/travis_after_success"
 - mkdir -p build/$TRAVIS_BRANCH && tar czf build/$TRAVIS_BRANCH/$TRAVIS_COMMIT-public.tar.gz Dockerfile default.conf public
-- mkdir -p dpl_cdn/$TRAVIS_BRANCH/$TRAVIS_COMMIT && cp -rf public/* dpl_cdn/$TRAVIS_BRANCH/$TRAVIS_COMMIT 
+- mkdir -p dpl_cdn/$TRAVIS_BRANCH/$TRAVIS_COMMIT && cp -rf public/assets dpl_cdn/$TRAVIS_BRANCH/$TRAVIS_COMMIT 
 before_script:
 - if [ ${TRAVIS_BRANCH} == master ]; then export NODE_ENV=production; else export
   NODE_ENV=staging; fi
