--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ env:
 after_success:
 - ".kubernetes/travis_after_success"
 - find public -name *.html | xargs sed -i bak -E "s%=\"/(assets|lib)%=\"//d2zw6j512x6z0x.cloudfront.net/$TRAVIS_BRANCH/$TRAVIS_COMMIT/\1%g" && find public -name *.htmlbak | xargs rm
-- mkdir -p build/$TRAVIS_BRANCH && tar --exclude-pattern public/lib --exclude-pattern public/assets -czf build/$TRAVIS_BRANCH/$TRAVIS_COMMIT-public.tar.gz Dockerfile default.conf public
+- mkdir -p build/$TRAVIS_BRANCH && tar --exclude public/lib --exclude public/assets -czf build/$TRAVIS_BRANCH/$TRAVIS_COMMIT-public.tar.gz Dockerfile default.conf public
 - mkdir -p dpl_cdn/$TRAVIS_BRANCH/$TRAVIS_COMMIT/lib && cp -rf public/assets dpl_cdn/$TRAVIS_BRANCH/$TRAVIS_COMMIT
 before_script:
 - if [ ${TRAVIS_BRANCH} == master ]; then export NODE_ENV=production; else export
