--- a/default.conf
+++ b/default.conf
@@ -18,6 +18,9 @@ server {
     }
 
     location / {
+        if ($http_x_forwarded_proto = 'http') {
+            return 301 https://app.octoblu.com$request_uri;
+        }
         root /usr/share/nginx/html;
         index  index.html index.htm;
 
