--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ after_success:
 - find public -name **/*.html | xargs sed -ir -e "s%=\"/assets%=\"//d2zw6j512x6z0x.cloudfront.net/$TRAVIS_BRANCH/$TRAVIS_COMMIT/assets%"
 - mkdir -p build/$TRAVIS_BRANCH && tar --exclude public/lib --exclude public/assets -czf build/$TRAVIS_BRANCH/$TRAVIS_COMMIT-public.tar.gz Dockerfile default.conf public
 - mkdir -p dpl_cdn/$TRAVIS_BRANCH/$TRAVIS_COMMIT && cp -rf public/assets dpl_cdn/$TRAVIS_BRANCH/$TRAVIS_COMMIT
+- find dpl_cdn -type f | xargs gzip -k --best
 before_script:
 - if [ ${TRAVIS_BRANCH} == master ]; then export NODE_ENV=production; else export
   NODE_ENV=staging; fi
@@ -49,6 +50,8 @@ deploy:
   bucket: app.octoblu.com
   region: us-west-2
   skip_cleanup: true
+  detect_encoding: true
+  cache_control: "max-age=31536000"
   local-dir: dpl_cdn
 - provider: s3
   access_key_id: AKIAIT4X4NDGM2WVL6VA
