--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-nodemon": "^1.0.4",
     "gulp-plumber": "^0.6.4",
     "gulp-sourcemaps": "^1.1.0",
+    "gulp-webserver": "^0.9.0",
     "lodash": "^3.6.0",
     "main-bower-files": "^2.6.2"
   },
