underscores_in_headers because nginx is lame

--- a/default.conf
+++ b/default.conf
@@ -2,6 +2,9 @@ server {
     listen       80;
     server_name  localhost;
 
+    // lame
+    underscores_in_headers on;
+
     location /healthcheck {
         return 200 '{"online" : true}';
     }
