--- a/default.conf
+++ b/default.conf
@@ -2,7 +2,6 @@ server {
     listen       80;
     server_name  localhost;
 
-    // lame
     underscores_in_headers on;
 
     location /healthcheck {
@@ -16,7 +15,7 @@ server {
         proxy_set_header        X-Forwarded-Proto $scheme;
         proxy_set_header        Host $http_host;
         proxy_pass_request_headers      on;
-        proxy_redirect          https://api.octoblu.com/ https://app.octoblu.com/;
+        proxy_redirect          off;
 
         proxy_pass   https://api.octoblu.com$uri$is_args$args;
     }
