hopefully this works

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,11 @@ env:
 after_success:
 - ".kubernetes/travis_after_success"
 - find public -name *.html | xargs sed -ir -e "s%=\"/assets%=\"//d2zw6j512x6z0x.cloudfront.net/$TRAVIS_BRANCH/$TRAVIS_COMMIT/assets%"
-- mkdir -p build/$TRAVIS_BRANCH && tar --exclude public/lib --exclude public/assets -czf build/$TRAVIS_BRANCH/$TRAVIS_COMMIT-public.tar.gz Dockerfile default.conf public
+- mkdir -p build/$TRAVIS_BRANCH && tar --exclude public/lib --exclude public/assets -cf build/$TRAVIS_BRANCH/$TRAVIS_COMMIT-public.tar Dockerfile default.conf public
+- tar --append -f build/$TRAVIS_BRANCH/$TRAVIS_COMMIT-public.tar public/lib/zeroclipboard/dist/ZeroClipboard.swf
+- gzip build/$TRAVIS_BRANCH/$TRAVIS_COMMIT-public.tar
 - mkdir -p dpl_static && cp build/$TRAVIS_BRANCH/$TRAVIS_COMMIT-public.tar.gz dpl_static/public.tar.gz
 - mkdir -p dpl_cdn/$TRAVIS_BRANCH/$TRAVIS_COMMIT && cp -rf public/assets dpl_cdn/$TRAVIS_BRANCH/$TRAVIS_COMMIT
-- mkdir -p dpl_cdn/$TRAVIS_BRANCH/$TRAVIS_COMMIT/lib/zeroclipboard/dist && cp -rf public/lib/zeroclipboard/dist/ZeroClipboard.swf dpl_cdn/$TRAVIS_BRANCH/$TRAVIS_COMMIT/lib/zeroclipboard/dist/ZeroClipboard.swf
 - for file in `find dpl_cdn -type f`; do gzip --best $file && mv $file.gz $file; done
 before_script:
 - if [ ${TRAVIS_BRANCH} == master ]; then export NODE_ENV=production; else export
