--- a/bower.json
+++ b/bower.json
@@ -18,8 +18,7 @@
   "private": true,
   "dependencies": {
     "jquery": "~2.1.1",
-    "angular": "=1.3.3",
-    "angular-aria": "=1.3.3",
+    "angular": "=1.3.3",    
     "angular-animate": "=1.3.3",
     "angular-sanitize": "=1.3.3",
     "angular-cookies": "=1.3.3",
@@ -47,7 +46,6 @@
     "mousetrap": "~1.4.6",
     "prism": "gh-pages",
     "mgo-mousetrap": "https://github.com/octoblu/mgo-mousetrap.git#0.1.5",
-    "angular-material": "~0.8.3",
     "zeroclipboard": "~2.1.6",
     "ng-clip": "~0.2.4",
     "angular-marked": "~0.0.12",
@@ -62,7 +60,8 @@
     "shepherd.js": "~0.6.14",
     "MutationObservers": "Polymer/MutationObservers#~0.4.2",
     "angular-schema-form": "~0.8.0",
-    "xxhash": "*"
+    "xxhash": "*",
+    "angular-material": "https://github.com/angular/bower-material/archive/v0.9.0-rc3.zip"
   },
   "devDependencies": {
     "chai": "~1.9.1",
