--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
   "private": true,
   "dependencies": {
     "jquery": "~2.1.1",
-    "angular": "=1.3.3",    
+    "angular": "=1.3.3",
     "angular-animate": "=1.3.3",
     "angular-sanitize": "=1.3.3",
     "angular-cookies": "=1.3.3",
@@ -61,7 +61,7 @@
     "MutationObservers": "Polymer/MutationObservers#~0.4.2",
     "angular-schema-form": "~0.8.0",
     "xxhash": "*",
-    "angular-material": "https://github.com/angular/bower-material/archive/v0.9.0-rc3.zip"
+    "angular-material": "~0.8.3"
   },
   "devDependencies": {
     "chai": "~1.9.1",
