--- a/bower.json
+++ b/bower.json
@@ -61,7 +61,8 @@
     "MutationObservers": "Polymer/MutationObservers#~0.4.2",
     "angular-schema-form": "~0.8.0",
     "xxhash": "*",
-    "angular-material": "~0.8.3"
+    "angular-material": "~0.8.3",
+    "ng-autofocus": "~0.0.1"
   },
   "devDependencies": {
     "chai": "~1.9.1",
