--- a/bower.json
+++ b/bower.json
@@ -18,11 +18,11 @@
   "private": true,
   "dependencies": {
     "jquery": "~2.1.1",
-    "angular": "=1.3.3",
-    "angular-animate": "=1.3.3",
-    "angular-sanitize": "=1.3.3",
-    "angular-cookies": "=1.3.3",
-    "angular-mocks": "=1.3.3",
+    "angular": "~1.3.16",
+    "angular-animate": "~1.3",
+    "angular-sanitize": "~1.3",
+    "angular-cookies": "~1.3",
+    "angular-mocks": "~1.3",
     "angular-ui-router": "~0.2.11",
     "modernizr": "~2.8.2",
     "fontawesome": "~4.2",
@@ -103,7 +103,7 @@
   "resolutions": {
     "d3": "~3.3.13",
     "angular": "1.3.x",
-    "angular-animate": "=1.3.3",
+    "angular-animate": "~1.3",
     "zeroclipboard": "~2.2.0"
   }
 }
