--- a/bower.json
+++ b/bower.json
@@ -62,7 +62,8 @@
     "xxhash": "*",
     "angular-material": "~0.8.3",
     "ng-autofocus": "~0.0.1",
-    "angular-draganddrop": "~0.2.1"
+    "angular-draganddrop": "~0.2.1",
+    "snap.svg": "~0.4.1"
   },
   "devDependencies": {
     "chai": "~1.9.1",
