--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "author": "Octoblu Inc.",
   "dependencies": {
+    "cors": "^2.7.1",
     "gulp": "^3.9.0",
     "gulp-bower": "^0.0.6",
     "gulp-clean": "^0.3.1",
