--- a/.systemd/octoblu-app-octoblu-green-healthcheck.service
+++ b/.systemd/octoblu-app-octoblu-green-healthcheck.service
@@ -15,6 +15,7 @@ ExecStart=/bin/sh -c "/usr/bin/echo 'Checking backends before switching vulcand'
     --id octoblu-app-octoblu \
     --backend octoblu-app-octoblu-green \
     --route \"Host(\\\"$(/usr/bin/etcdctl get /octoblu/app-octoblu/host)\\\")\" \
+    --trustForwardHeader \
     --vulcan http://$(/usr/bin/etcdctl get /vulcand/host):8182 && \
   /usr/bin/etcdctl set /octoblu/app-octoblu/active green \
 "
