--- a/default.conf
+++ b/default.conf
@@ -17,7 +17,7 @@ server {
         proxy_pass_request_headers      on;
         proxy_redirect          off;
 
-        proxy_pass   https://api.octoblu.com$uri$is_args$args;
+        proxy_pass   https://api-proxy.octoblu.com$uri$is_args$args;
     }
 
     location / {
