try to get some more error info

--- a/default.conf
+++ b/default.conf
@@ -2,6 +2,8 @@ server {
     listen       80;
     server_name  localhost;
 
+    error_log stderr info;
+
     underscores_in_headers on;
 
     location /healthcheck {
