--- a/default.conf
+++ b/default.conf
@@ -6,6 +6,10 @@ server {
 
     underscores_in_headers on;
 
+    large_client_header_buffers 4 16k;
+
+    client_header_buffer_size 2k;
+
     location /healthcheck {
         return 200 '{"online" : true}';
     }
